2007-11-06  Mario Torre  <neugens@limasoftware.net>

	* vm/reference/java/io/VMFile.java: 
	(getTotalSpace): new method.
	(getUsableSpace): likewise.
	(getFreeSpace): likewise.
	* java/io/File.java: (getTotalSpace): new method. 
	(getUsableSpace): likewise.
	(getFreeSpace): likewise.
	* native/jni/java-io/java_io_VMFile.c:
	(Java_java_io_VMFile_getTotalSpace): new function.
	(Java_java_io_VMFile_getFreeSpace): likewise.
	(Java_java_io_VMFile_getUsableSpace): likewise.
	* native/jni/native-lib/cpio.h: (cpio_df): new function.
	(CPFILE_DF_TYPE): enum type for cpio_df.
	* native/jni/native-lib/cpio.c: (cpio_df): new function.
	* include/java_io_VMFile.h: regenerated.
	* configure.ac: added check for statvfs.

2007-11-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        PR classpath/33385:
	* tools/com/sun/tools/javac/Main.java:
	Make our wrapper 1.5 capable.
	
2007-11-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/lang/MainThread.java:
	Fix varargs warning.
	* lib/Makefile.am:
	Remove restriction on ecj printing varargs warnings.

2007-11-01  Mario Torre  <neugens@limasoftware.net>

	PR classpath/33982:
	* configure.ac: add GDK_CFLAGS for the GStreamer peer.

2007-11-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/awt/java2d/ScanlineCoverage.java,
	* gnu/javax/net/ssl/provider/ServerHandshake.java:
	Fix non-ASCII characters in the Javadoc comments.
	* gnu/java/lang/management/BeanImpl.java,
	* gnu/javax/management/Server.java,
	* gnu/xml/pipeline/EventFilter.java,
	* java/awt/AWTKeyStroke.java,
	* java/beans/DefaultPersistenceDelegate.java,
	* java/beans/EventHandler.java,
	* java/io/ObjectStreamClass.java,
	* java/lang/Class.java,
	* java/lang/reflect/Proxy.java,
	* javax/management/NotificationBroadcasterSupport.java,
	* javax/management/StandardMBean.java,
	* javax/swing/TransferHandler.java:
	Fix warnings from use of varargs methods.

2007-10-27  Ian Rogers  <ian.rogers@manchester.ac.uk>
