@@ -1,3 +1,8 @@
+2007-11-08  Jeroen Frijters  <jeroen@frijters.net>
+
+	* java/util/Locale.java
+        (Locale): Always intern strings.
+
 2007-11-06  Mario Torre  <neugens@limasoftware.net>
 
 	* vm/reference/java/io/VMFile.java: 
